removed a \n from perimeter.yaml

--- a/templates/files/perimeter.yaml
+++ b/templates/files/perimeter.yaml
@@ -2,5 +2,4 @@ areas:
   - area:
       coords: {% for x,y in point_list %}
         - x: {{x}}
-          y: {{y}}
-        {% endfor %}
+          y: {{y}}{% endfor %}
