changed trayec_managername and added support for axis and walls in visualization

--- a/templates/files/rviz_scenariovis.yaml
+++ b/templates/files/rviz_scenariovis.yaml
@@ -61,6 +61,33 @@ Visualization Manager:
         Reliability Policy: Reliable
         Value: /area_info
       Value: true
+    - Class: rviz_default_plugins/Marker
+      Enabled: true
+      Name: Marker
+      Namespaces:
+        axis: true
+        texto: true
+      Topic:
+        Depth: 5
+        Durability Policy: Volatile
+        Filter size: 10
+        History Policy: Keep Last
+        Reliability Policy: Reliable
+        Value: /xview
+      Value: true
+    - Class: rviz_default_plugins/Marker
+      Enabled: true
+      Name: Marker
+      Namespaces:
+        walls: true
+      Topic:
+        Depth: 5
+        Durability Policy: Volatile
+        Filter size: 10
+        History Policy: Keep Last
+        Reliability Policy: Reliable
+        Value: /walls
+      Value: true
     {% for key, value in drones_bag %}
     - Class: rviz_default_plugins/Marker
       Enabled: true
